--- a/views/post.twig
+++ b/views/post.twig
@@ -2,11 +2,43 @@
 
 {% block title %}{{ post.head.title }}{% endblock %}
 
-{% block keywords %}{{ keywords }}{% endblock %}
+{%  block meta %}
+	{%  for m in meta %}
+		<meta name="{{ m.name }}" content="{{ m.content }}">
+	{%  endfor %}
+{%  endblock %}
 
 {% block content %}
-		{% for post in posts %}
-
-			{{ post.body.asXML()|replace({'<body>':'','</body>':''})|raw }}
-		{% endfor %}
+	<nav class="breadcrumb">
+		<ul>
+			<li>
+				<a href="/">Home</a>
+			</li>
+			<li>
+				<a href="/blog">Blog</a>
+			</li>
+			<li>
+				<a href="/blog/{{ year|url_encode }}">{{ year }}</a>
+			</li>
+			<li>
+				<a href="/blog/{{ year|url_encode }}/{{ month|url_encode }}">{{ month }}</a>
+			</li>
+			<li>
+				<a href="/blog/{{ year|url_encode }}/{{ month|url_encode }}/{{ day|url_encode }}">{{ day }}</a>
+			</li>
+			<li>
+				<a href="{{ permalink }}">
+					{{ post.head.title }}
+				</a>
+			</li>
+		</ul>
+	</nav>
+	<article>
+		<h1 class="post-title">
+			<a href="{{ permalink }}">
+				{{ post.head.title }}
+			</a>
+		</h1>
+		{{ post.body.asXML()|replace({'<body>':'','</body>':''})|raw }}
+	</article>
 {% endblock %}
