--- a/views/page.twig
+++ b/views/page.twig
@@ -29,20 +29,5 @@
 	<article>
 		{{ page.body.asXML()|replace({'<body>':'','</body>':''})|raw }}
 	</article>
-	<nav>
-		{% if next or prev %}
-		<ul>
-			{% if prev %}
-			<li>
-				<a href="{{ prev }}">Previous</a>
-			</li>
-			{% endif %}
-			{% if next %}
-				<li>
-					<a href="{{ next }}">Next</a>
-				</li>
-			{% endif %}
-		</ul>
-		{% endif %}
-	</nav>
+	{% include '_pageNav.twig' %}
 {% endblock %}
