--- a/views/layout.twig
+++ b/views/layout.twig
@@ -23,10 +23,20 @@
 					{{ app.siteName }}
 				</a>
 			</h1>
+			<nav>
+				<ul>
+					<li>
+						<a href="/blog/">Blog</a>
+					</li>
+					<li>
+						<a href="/about.html">About</a>
+					</li>
+				</ul>
+			</nav>
 		</header>
 		{% block content %}{% endblock %}
 		<footer>
-			Brought to you by <a href="http://abouthalf.com" target="_blank">Abouthalf.com</a>
+			<a href="http://abouthalf.com" target="_blank">Brought to you by Abouthalf.com</a>
 		</footer>
 	</body>
 </html>
