--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -284,14 +284,14 @@ html,body{height:100%;}
 body{background-color:#f2f2ee;}
 header,footer,h1,h2,h3,h4,h5,h6{color:#918a77;font-weight:normal;}
 nav ul,nav li{margin-left:0;padding-left:0;}
-nav.breadcrumb{margin-top:0;margin-bottom:24px;margin-bottom:1.5rem;}nav.breadcrumb ul{margin:0;padding:0;font-size:14px;font-size:0.875rem;line-height:1.714;}nav.breadcrumb ul li{display:inline-block;}nav.breadcrumb ul li:before{content:'» ';}
+nav.breadcrumb{margin-top:1.5rem;margin-top:0;margin-bottom:24px;margin-bottom:1.5rem;}nav.breadcrumb ul{margin:0;padding:0;font-size:14px;font-size:0.875rem;line-height:1.714;}nav.breadcrumb ul li{display:inline-block;}nav.breadcrumb ul li:before{content:'» ';}
 nav.breadcrumb ul li:first-child:before{content:'';}
 nav.pageNav{position:fixed;z-index:2;width:12em;bottom:3rem;right:0;padding-left:5rem;}
-header{position:fixed;z-index:1;top:0;right:0;height:100%;width:12em;padding:.5em;background-color:#ffffff;border-left:0.5em solid #918a77;outline:0.5em solid #b6b3aa;}
-header h1{font-size:1.5rem;padding-left:5rem;background-image:url('/css/images/logo.png');background-position:left center;background-size:auto 4rem;background-repeat:no-repeat;}
-footer{font-size:14px;font-size:0.875rem;line-height:1.714;background-image:url('/css/images/abouthalfLogo.png');background-position:bottom center;background-repeat:no-repeat;background-size:auto 3em;text-align:center;padding-bottom:3em;margin-right:14em;}
+header{position:fixed;z-index:1;top:0;right:0;height:100%;width:12em;padding:.5em;background-color:#ffffff;border-left:0.5em solid #918a77;outline:0.5em solid #b6b3aa;}header h1{font-size:1.5rem;padding-left:5rem;background-image:url('/css/images/logo.png');background-position:left center;background-size:auto 4rem;background-repeat:no-repeat;}
+header nav ul,header nav li{margin-left:0;padding-left:0;}
+header nav ul{width:12em;padding-left:5rem;}
+footer{font-size:14px;font-size:0.875rem;line-height:1.714;margin-top:0;margin-bottom:24px;margin-bottom:1.5rem;background-image:url('/css/images/abouthalfLogo.png');background-position:bottom center;background-repeat:no-repeat;background-size:auto 3em;text-align:center;padding-bottom:3em;margin-right:14em;}
+div.archives+footer{margin-right:0;}
 div.page,div.archives{margin-left:14em;margin-right:14em;padding-left:1.5rem;}
 aside+div.page,aside+div.page+footer{margin-left:40%;}
-aside{position:fixed;top:0;width:40%;height:100%;}
-aside a{margin:0 auto;display:block;}
-aside img{width:auto;height:100%;margin:0 auto;border-right:0.5em solid #918a77;outline:0.5em solid #b6b3aa;}
+aside{position:fixed;top:0;width:40%;height:100%;}aside a{margin:0 auto;display:block;}aside a img{max-height:100%;margin:0 auto;border-right:0.5em solid #918a77;outline:0.5em solid #b6b3aa;}
