No warnings please.

--- a/views/404.twig
+++ b/views/404.twig
@@ -3,11 +3,14 @@
 {% block title %}404{% endblock %}
 
 {% block content %}
-<article>
-	<h1>Not found</h1>
-	<p>There is nothing at this address.</p>
-	<p><a href="index.html">Start here.</p>
-</article>
+	<div class="page">
+		<article>
+			<h1>Not found</h1>
+			<p>There is nothing at this address.</p>
+			<p><a href="index.html">Start here.</p>
+		</article>
+	</div>
+
 {% endblock %}
 
 
