--- a/views/404.twig
+++ b/views/404.twig
@@ -1,16 +1,20 @@
 {% extends 'layout.twig' %}
 
-{% block title %}404{% endblock %}
+{% block title %}404 Not Found{% endblock %}
 
 {% block content %}
 	<div class="page">
+		<nav class="breadcrumb">
+			<ul>
+				<li><a href="/">Home</a></li>
+			</ul>
+		</nav>
 		<article>
 			<h1>Not found</h1>
 			<p>There is nothing at this address.</p>
-			<p><a href="index.html">Start here.</p>
+			<p><a href="index.html">Start here.</a></p>
 		</article>
 	</div>
-
 {% endblock %}
 
 
