--- a/views/layout.twig
+++ b/views/layout.twig
@@ -36,6 +36,12 @@
 						<a href="/about.html">About</a>
 					</li>
 					<li>
+						<a href="https://twitter.com/ArchiesRecipes" target="_blank">
+							Twitter
+							<i class="icon-twitter"></i>
+						</a>
+					</li>
+					<li>
 						<a href="/rss">
 							RSS
 							<i class="icon-rss"></i>
