--- a/views/layout.twig
+++ b/views/layout.twig
@@ -54,5 +54,18 @@
 		<footer>
 			<a href="http://abouthalf.com" target="_blank">Brought to you by Abouthalf.com</a>
 		</footer>
+		<script type="text/javascript">
+
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-37327675-1']);
+			_gaq.push(['_trackPageview']);
+
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+
+		</script>
 	</body>
 </html>
