--- a/web/less/styles.less
+++ b/web/less/styles.less
@@ -42,7 +42,7 @@ header
 		margin: 0;
 		background-image: url('/css/images/logo.png');
 		background-position: left center;
-		background-size: auto 4em;
+		background-size: auto (@baseFontSize * 4);
 		background-repeat: no-repeat;
 	}
 	nav
