--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -282,7 +282,7 @@ h4,h5,h6{font-size:16px;font-size:1rem;line-height:1.5;}
 *{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;}
 html,body{height:100%;}
 body{background-color:#f2f2ee;}
-header{background-color:#ffffff;border-bottom:0.5em solid #b6b3aa;padding:.5em;line-height:1;}header h1{width:12rem;font-size:1.5rem;display:inline-block;vertical-align:middle;padding-left:5rem;margin:0;background-image:url('/css/images/logo.png');background-position:left center;background-size:auto 4rem;background-repeat:no-repeat;}
+header{background-color:#ffffff;border-bottom:0.5em solid #b6b3aa;padding:.5em;line-height:1;}header h1{width:12rem;font-size:1.5rem;display:inline-block;vertical-align:middle;padding-left:5rem;margin:0;background-image:url('/css/images/logo.png');background-position:left center;background-size:auto 64px;background-repeat:no-repeat;}
 header nav{display:inline-block;vertical-align:middle;line-height:1;margin-left:1.5rem;margin-bottom:0;}header nav ul li{display:inline-block;vertical-align:middle;}header nav ul li:after{content:' | ';}
 header nav ul li:last-child:after{content:none;}
 header,footer,h1,h2,h3,h4,h5,h6{color:#918a77;font-weight:normal;}
