--- a/views/layout.twig
+++ b/views/layout.twig
@@ -11,7 +11,7 @@
 		</title>
 		<link rel="alternate" type="application/rss+xml" title="{{ app.siteName }}" href="{{ app.baseUrl }}/rss">
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		{% block meta %}
 		<meta name="keywords" content="{{ app.defaultKeywords }}">
 		{% endblock %}
