--- a/views/layout.twig
+++ b/views/layout.twig
@@ -10,6 +10,10 @@
 			{%  block title %}{% endblock %}
 		</title>
 		<link rel="alternate" type="application/rss+xml" title="{{ app.siteName }}" href="{{ app.baseUrl }}/rss">
+		<link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png" />
+		<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png" />
+		<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png" />
+		<link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.png" />
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		{% block meta %}
